# ruxlog-backend

./: .dockerignore  .env  .env.dev  .env.docker  .env.example  .env.prod  .env.remote  .env.stage  .env.test  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  HTTP_SPECS_CORRECTIONS.md  Justfile  LICENSE.md  PORTS.md  deployment.md  diesel.toml  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  docs.md  package.json  readme.md  river.md  server-setup.sh  test-setup.sh
backend/api/: .env.docker  .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  docker-compose.observability.yml.backup  justfile  package.json  readme.md  tsconfig.json
backend/api/.github/workflows/: cicd.yml
backend/api/apis/: yaak.fl_QeXjjsz9iA.yaml  yaak.fl_TQswtzwsbf.yaml  yaak.fl_U5Rh96t29R.yaml  yaak.fl_gzZrZWCuTv.yaml  yaak.rq_RkrkW8XQ6v.yaml  yaak.rq_UwJSP9EdwM.yaml  yaak.rq_gA72R89PHX.yaml  yaak.rq_hqrDi4UoZH.yaml  yaak.rq_i7Pp9zg98R.yaml  yaak.rq_iYfBAgAZHM.yaml  yaak.rq_xiCsCJ33sa.yaml  yaak.rq_xvZKSVrRX5.yaml
backend/api/backup/: quickwit_bootstrap.sh
backend/api/crates/rux-auth/: Cargo.toml  IMPLEMENTATION.md
backend/api/crates/rux-auth/src/: error.rs  lib.rs  traits.rs
backend/api/docker/: steps.md
backend/api/docs/: DEPLOY_STEPS.md  ERROR_HANDLING.md  MISSING_FEATURES.md  TECHNICAL_DEBT_IMPROVEMENT_GUIDE.md  TRAEFIK_SETUP.md  WATCHTOWER_SETUP.md
backend/api/migration/: Cargo.toml
backend/api/migration/src/: lib.rs  m20250502_000003_create_forgot_password_table.rs  m20250502_000005_create_tag_table.rs  m20250502_000008_create_post_view_table.rs  m20250509_000009_alter_tag_add_appearance.rs  m20250510_000010_alter_category_add_color_is_active.rs  m20250812_000012_create_post_revisions_table.rs  m20250812_000012_create_user_sessions_table.rs  m20250812_000014_create_post_series_tables.rs  m20250813_000015_alter_asset_context_enum.rs  m20250813_000016_alter_post_comment_add_moderation.rs  m20250813_000017_create_comment_flags_table.rs  m20251029_000019_drop_asset_table.rs  m20251030_000021_alter_category_change_media_fields.rs  m20251104_000025_create_route_status_table.rs  m20251106_000026_alter_posts_content_to_jsonb.rs  m20251106_000027_fill_posts_content_from_string.rs  m20251118_000024_alter_user_add_avatar_id.rs  m20251119_000028_alter_posts_featured_image.rs  m20251125_000034_create_post_likes_table.rs  m20251201_000029_alter_user_add_oauth_fields.rs  m20251202_000030_create_seed_runs_table.rs  m20251203_000031_alter_email_and_forgot_password_add_updated_at.rs  m20251204_000032_rename_media_variant_table.rs  m20251205_000033_create_app_constants_table.rs  m20251220_000035_create_user_bans_table.rs
backend/api/scripts/: archive_changes.rs  archive_changes.ts  generate_hash.rs  prod_redis.sh  restore_changes.rs
backend/api/src/: lib.rs  main.rs  router.rs  state.rs
backend/api/src/core/: auth.rs  config.rs  context.rs  db.rs  mod.rs  redis.rs  tags.rs  types.rs
backend/api/src/db/: sea_connect.rs
backend/api/src/db/sea_models/: mod.rs
backend/api/src/error/: auth.rs  codes.rs  middleware.rs  mod.rs  response.rs
backend/api/src/middlewares/: auth_guard.rs  cors.rs  http_metrics.rs  mod.rs  route_blocker.rs  static_csrf.rs  user_permission.rs  user_status.rs
backend/api/src/modules/: mod.rs
backend/api/src/modules/admin_acl_v1/: controller.rs  mod.rs  validator.rs
backend/api/src/modules/admin_route_v1/: controller.rs  mod.rs  validator.rs
backend/api/src/modules/analytics_v1/: mod.rs
backend/api/src/modules/auth_v1/: controller.rs  mod.rs
backend/api/src/modules/category_v1/: controller.rs  mod.rs
backend/api/src/services/: abuse_limiter.rs  acl_service.rs  auth.rs  image_optimizer.rs  mod.rs  redis.rs  route_blocker_config.rs  route_blocker_service.rs  seed.rs  seed_config.rs  supabase.rs
backend/api/src/tui/: app.rs  mod.rs  theme.rs
backend/api/src/utils/: color.rs  cors.rs  mod.rs  sort.rs
backend/api/tests/: _analytics_common.sh  analytics_capture.sh  analytics_page_views.sh  analytics_registration_trends.sh  analytics_run_all.sh  analytics_verification_rates.sh  comment_moderation_v1_smoke.sh  post_v1_smoke.sh  request_body_limits.rs
backend/api/traefik/: .env.dev  .env.prod.example  traefik.dev.yml  traefik.prod.yml
frontend/oxcore/: AGENTS.md  Cargo.toml
frontend/oxcore/src/http/: config.rs  mod.rs  native.rs  wasm.rs
frontend/oxstore/: AGENTS.md  Cargo.toml
frontend/oxstore/src/: abstractions.rs  error.rs  http.rs  lib.rs  pagination.rs  query.rs  state.rs  traits.rs
frontend/oxui/: AGENTS.md  Cargo.toml
frontend/oxui/src/: lib.rs
frontend/oxui/src/components/: confirm_dialog.rs  mod.rs  portal_v2.rs
frontend/oxui/src/custom/: mod.rs
frontend/oxui/src/hooks/: mod.rs  use_unique_id.rs
frontend/oxui/src/radix/: alert_dialog.rs
frontend/oxui/src/shadcn/: combobox.rs  dialog.rs  dropdown_menu.rs  popover.rs
frontend/ruxlog-shared/: AGENTS.md  Cargo.toml  README.md  package.json  tailwind.css
frontend/ruxlog-shared/src/: lib.rs
frontend/ruxlog-shared/src/components/: auth_guard.rs  mod.rs
frontend/ruxlog-shared/src/store/: mod.rs
migration/: .gitignore  Cargo.toml
migration/src/: lib.rs  m20250502_000001_create_user_table.rs  m20250502_000002_create_email_verification_table.rs  m20250502_000003_create_forgot_password_table.rs  m20250502_000004_create_category_table.rs  m20250502_000006_create_post_table.rs  m20250502_000007_create_post_comment_table.rs  m20250503_000001_create_asset_table.rs  m20250509_000009_alter_tag_add_appearance.rs  m20250811_000011_create_newsletter_subscribers_table.rs  m20250812_000013_alter_user_add_twofa_fields.rs  m20250812_000013_create_scheduled_posts_table.rs  m20250813_000015_alter_asset_context_enum.rs  m20250813_000016_alter_post_comment_add_moderation.rs  m20250814_000018_create_media_table.rs  m20251104_000025_create_route_status_table.rs  m20251116_000020_create_media_variant_table.rs  m20251116_000022_alter_media_add_hash.rs  m20251117_000023_create_media_usages_table.rs
(+748 files in other folders)
