[package]
name = "axum_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-apple-darwin]
rustflags = '-L /opt/homebrew/opt/libpq/lib -L /opt/homebrew/lib'

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
axum-login = "0.16.0"
validator = { version = "0.18.1", features = ["derive"] }
axum-valid = { version = "0.20.0", default-features = false, features = [
    "basic",
    "garde",
    "validator",
    "into_json",
] }
serde_json = "1.0.128"
tower-livereload = "0.9.4"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
# validator = { version = "0.16.1", features = ["derive"] }
tower-http = { version = "0.6.1", features = [
    "trace",
    "compression-gzip",
    "cors",
    "limit",
    "fs",
] }
tower_governor = "0.4.2"
tower-sessions-core = "0.13"
tower-sessions-redis-store = "0.14.0"
tower-sessions = { version = "0.13", features = ["private"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
garde = { version = "0.20.0", features = ["full"] }
diesel = { version = "2.2.4", features = ["postgres", "chrono"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
axum-macros = "0.4.2"
axum_garde = "0.20.0"
thiserror = "1.0.64"
md5 = "0.7.0"
password-auth = "1.0.0"
time = "0.3.36"
governor = "0.6.3"
hex = "0.4.3"
sha2 = "0.10.8"
axum_csrf = { version = "0.10.0", features = ["layer"] }
base64 = "0.22.1"
rand = "0.8.5"
fred = "9.2.1"
axum-client-ip = "0.6.1"
lettre = { version = "0.11.9", features = ["default", "tokio1-native-tls"] }
regex = "1.11.0"

# lettre = "0.11.9"
