[package]
name = "ruxlog"
default-run = "ruxlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-apple-darwin]
rustflags = '-L /opt/homebrew/opt/libpq/lib -L /opt/homebrew/lib'

[dependencies]
migration = { path = "./migration" }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = [
    "typed-header",
    "cookie",
    "query",
] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-json",
    "debug-print",
] }
axum-login = { version = "0.17.0" }
# axum-login = { path = "../axum-login/axum-login" }
fake = { version = "4.3.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.23.0", default-features = false, features = [
    "basic",
    "validator",
    "into_json",
] }
serde_json = "1.0.130"
tower-livereload = "0.9.6"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
# validator = { version = "0.16.1", features = ["derive"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "compression-gzip",
    "cors",
    "limit",
    "fs",
] }
tower_governor = "0.4.2"
tower-sessions-core = "0.9.0"
tower-sessions-redis-store = "0.16.0"
tower-sessions = { version = "0.14", features = ["private"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
chrono = { version = "0.4.40", features = ["serde"] }
axum-macros = "0.5.0"
thiserror = "2.0.12"
md5 = "0.7.0"
password-auth = "1.0.0"
time = "0.3.41"
governor = "0.6.3"
hex = "0.4.3"
sha2 = "0.10.8"
axum_csrf = { version = "0.11.0", features = ["layer"] }
base64 = "0.22.1"
rand = "0.9.0"
fred = "10.1.0"
axum-client-ip = "1.0.0"
lettre = { version = "0.11.9", features = ["default", "tokio1-native-tls"] }
regex = "1.11.1"
lazy_static = "1.5.0"
async-trait = "0.1.88"
log = "0.4.27"
envy = "0.4.2"
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.83.0"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
base32 = "0.5.1"
hmac = "0.12.1"
sha1 = "0.10.6"
urlencoding = "2.1.3"

[[bin]]
name = "generate_hash"
path = "scripts/generate_hash.rs"

[[bin]]
name = "generate_csrf"
path = "scripts/generate_csrf.rs"
