[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] }
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = "0.15.7"
tokio = { version = "1.44.2", features = ["full"] }

[dependencies.sea-orm-migration]
version = "1.1.10"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-connection/
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
