[workspace]
members = [".", "crates/rux-auth"]
resolver = "2"

[package]
name = "ruxlog"
default-run = "ruxlog"
version = "0.1.0"
edition = "2021"

[dependencies]
rux-auth = { path = "./crates/rux-auth" }
migration = { path = "./migration" }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = [
    "typed-header",
    "cookie",
    "query",
] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-json",
    "debug-print",
] }
# axum-login removed - replaced by rux-auth
fake = { version = "4.3.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.23.0", default-features = false, features = [
    "basic",
    "validator",
    "into_json",
] }
serde_json = "1.0.130"
tower-livereload = "0.9.6"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
# validator = { version = "0.16.1", features = ["derive"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "compression-gzip",
    "cors",
    "limit",
    "fs",
] }
tower_governor = "0.4.2"
tower-sessions-core = "0.9.0"
tower-sessions-redis-store = "0.16.0"
tower-sessions = { version = "0.14", features = ["private"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
opentelemetry = { version = "0.31.0", features = ["metrics", "trace", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "metrics", "trace", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-blocking-client", "metrics", "logs", "trace"] }
tracing-opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-semantic-conventions = "0.31.0"
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
axum-macros = "0.5.0"
thiserror = "2.0.12"
md5 = "0.7.0"
password-auth = "1.0.0"
time = "0.3.41"
governor = "0.6.3"
hex = "0.4.3"
sha2 = "0.10.8"
axum_csrf = { version = "0.11.0", features = ["layer"] }
base64 = "0.22.1"
rand = "0.9.0"
clap = { version = "4.5", features = ["derive"] }
fred = { version = "10.1.0", features = ["sha-1", "i-scripts"] }
axum-client-ip = "1.0.0"
lettre = { version = "0.11.9", features = ["default", "tokio1-native-tls"] }
regex = "1.11.1"
lazy_static = "1.5.0"
async-trait = "0.1.88"
log = "0.4.27"

aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.83.0"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
base32 = "0.5.1"
hmac = "0.12.1"
sha1 = "0.10.6"
data-encoding = "2.3.3"
getrandom = "0.2"
urlencoding = "2.1.3"
imagesize = "0.12.0"
bytes = "1.7.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
oauth2 = "4.4"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
ratatui = "0.29"
crossterm = "0.29"
tuirealm = "3.2.0"
tui-realm-stdlib = "3.0.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "generate_hash"
path = "scripts/generate_hash.rs"

[[bin]]
name = "generate_csrf"
path = "scripts/generate_csrf.rs"

[[bin]]
name = "archive_changes"
path = "scripts/archive_changes.rs"

[[bin]]
name = "restore_changes"
path = "scripts/restore_changes.rs"

[[bin]]
name = "ruxlog_tui"
path = "scripts/ruxlog_tui.rs"
