[package]
name = "oxstore"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
oxcore = { path = "../oxcore" }
web-sys = { version = "0.3.69", features = ["Window", "Navigator"] }

[features]
default = []
web = []

[profile.wasm-dev]
inherits = "dev"
opt-level = 1