[package]
name = "oxui"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["web"] }
dioxus-time = { version = "0.7.1" }
hmziq-dioxus-free-icons = { version = "0.10.1", features = ["simple-icons", "lucide"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
im = "15.1.0"
uuid = { version = "1.16.0", features = ["v4", "js"] }
js-sys = "0.3"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "HtmlDocument",
    "Element",
    "HtmlElement",
    "DomRect",
    "NodeList",
    "EventTarget",
    "Node",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "Selection",
    "Range",
    "CustomEvent",
    "Event",
] }
wasm-bindgen = "0.2.100"
gloo-utils = "0.2.0"
oxform = { path = "../oxform" }
oxstore = { path = "../oxstore" }

[features]
default = []
web = []

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[patch.crates-io]
dioxus-time = { path = "../admin-dioxus/pkgs/sdk/packages/time", version = "0.7.1" }
