[package]
name = "ruxlog-shared"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
web-sys = { version = "0.3.69", features = [
    "Window",
    "Navigator",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Url",
    "CanvasRenderingContext2d",
    "ImageData",
    "FilePropertyBag",
    "Blob",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

photon-rs = "0.3.2"
futures-channel = "0.3"

# Internal dependencies
oxcore = { path = "../oxcore" }
oxstore = { path = "../oxstore" }
oxui = { path = "../oxui" }

[features]
default = []
web = []

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[patch.crates-io]
dioxus-time = { path = "../admin-dioxus/pkgs/sdk/packages/time", version = "0.7.1" }
