[package]
name = "ruxlog-shared"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-time = { version = "0.7.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
web-sys = { version = "0.3.69", features = [
    "Window",
    "Navigator",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Url",
    "CanvasRenderingContext2d",
    "ImageData",
    "FilePropertyBag",
    "Blob",
    "File",
    "Response",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

photon-rs = { version = "0.3.2", optional = true }
futures-channel = { version = "0.3", optional = true }

# Internal dependencies
oxcore = { path = "../oxcore" }
oxstore = { path = "../oxstore" }
oxui = { path = "../oxui" }

[features]
default = []
web = []
image-editor = ["photon-rs", "futures-channel"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[patch.crates-io]
dioxus-time = { path = "../dioxus_pkgs/sdk/packages/time", version = "0.7.1" }
