[package]
name = "rux-auth"
version = "0.1.0"
edition = "2021"
description = "Composable authentication and authorization for Axum"

[dependencies]
axum = "0.8"
axum-core = "0.5"
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tower-sessions = "0.14"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
http = "1.0"
pin-project-lite = "0.2"
futures-util = "0.3"
